--- a/code/scratch.ipynb
+++ b/code/scratch.ipynb
@@ -93,12 +93,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.8\n",
+      "0.691937432591\n",
+      "0.222483749125\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import poisson\n",
+    "\n",
+    "p = poisson(2.8)\n",
+    "print(p.mean())\n",
+    "print(p.cdf(3))\n",
+    "print(p.pmf(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "120.0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import factorial\n",
+    "print(factorial(10)/(factorial(3)*factorial(7)))\n",
+    ".3*(factorial(10)/(factorial(3)*factorial(7))) + .7*(factorial(10)/(factorial(3)*factorial(7)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "woo\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAEACAYAAAC9Gb03AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEDZJREFUeJzt3V+MXGd9xvHv47hxgRBj/mQt7MQGmgZoS0MuggFVHRoE\nJKh1biKFFkFCKiEBJW0kVCc39k0rgoT4I6pGiDRyEBDAUOJWiLiR2VZIkABJIG2CcUud2Am7lCZu\nSqDk368Xe+Ld2GN2vN71Gb/7/UijnHn3zDmPJ7vPvntmzplUFZKkdq3oO4AkaWlZ9JLUOItekhpn\n0UtS4yx6SWqcRS9JjRup6JPsS/K9JHcmub0bW5NkV5I9SW5JsnrO+h9PsjfJXUnOXarwkqT5jTqj\nfwoYVNWrq+r8bmwLcGtVnQPsBq4GSHIh8LKqOht4N3DdImeWJB2DUYs+Q9bdDGzvlrd3958evxGg\nqm4DVieZOM6ckqQFGrXoC7glybeT/Gk3NlFV0wBVNQWc0Y2vA/bPeewD3ZgkqQcrR1zvdVU1leRF\nwK4ke5gp/2EyZMzrLEhST0Yq+m7GTlX9V5KvAOcD00kmqmo6yVrgJ93qB4Az5zx8PfDg4dtMYvlL\n0gJU1bAJ9VHNe+gmybOTnNYtPwd4E3A3sBO4rFvtMuDmbnkn8I5u/U3AwacP8QwJ662KrVu39p5h\nXG4+Fz4XPhe/+rYQo8zoJ4C/72bgK4HPVNWuJN8BvpDkXcD9wCVdeX81yUVJ/h14FLh8QckkSYti\n3qKvqv8EjngvfFU9BLzxKI953/FHkyQtBs+MHQODwaDvCGPD52KWz8Usn4vjk4Ue8znuHSfV174l\n6WSVhFrsF2MlSSc3i16SGmfRS1LjLHpJapxFL0mNs+glqXEWvSQ1zqLXIWvXbiRJr7e1azf2/TRI\nzfGEKR2ShP6vKJ0FX7hJWg48YUqSdASLXpIaN+onTEknyKruEFJ/JiY2MDW1r9cM0mLyGL0OGZdj\n9OOQwe9NjSuP0UuSjmDRS1LjLHpJapxFL0mNs+glqXEWvSQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6\nSWqcRS9JjbPoJalxFr0kNc6il6TGWfSS1DiLXpIaZ9FLUuMseklqnEUvSY2z6CWpcSMXfZIVSe5I\nsrO7vzHJt5LsSfK5JCu78VOT3JRkb5JvJjlrqcJLkuZ3LDP6K4F75ty/FvhwVZ0DHASu6MavAB6q\nqrOBjwIfWoygkqSFGanok6wHLgI+NWf4D4AvdcvbgYu75c3dfYAdwAXHH1OStFCjzug/AnwAKIAk\nLwAerqqnuq8fANZ1y+uA/QBV9SRwMMnzFy2xJOmYrJxvhSRvBaar6q4kg6eHu9tcNedrz9jEnK89\nw7Zt2w4tDwYDBoPBsNUkadmanJxkcnLyuLaRqqEdPLtC8tfA24EngGcBzwW+ArwJWFtVTyXZBGyt\nqguTfK1bvi3JKcCPq+qMIdut+fatEys56u/kE5liLDL4valxlYSqOnxC/SvNe+imqq6pqrOq6qXA\npcDuqno78HXgkm61dwI3d8s7u/t0X999LIEkSYvreN5HvwW4KskPgecD13fj1wMvTLIX+PNuPUlS\nT+Y9dLNkO/bQzdjx0M1sBr83Na6W5NCNJOnkZtFLUuMseklqnEUvSY2z6CWpcRa9JDXOopekxln0\nktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEWvSQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6SWqcRS9J\njbPoJalxFr0kNc6il6TGWfSS1DiLXpIaZ9FLUuNW9h1AGj+rSNJ3CCYmNjA1ta/vGGpAqqqfHSfV\n17413Ey59f3/xAyzgj8jOlwSquqYZiIeupGkxln0ktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXHz\nFn2SVUluS3JnkruTbO3GNyb5VpI9ST6XZGU3fmqSm5LsTfLNJGct9T/iZLd27UaS9H6T1KZ5i76q\nfgm8oapeDZwLXJjkNcC1wIer6hzgIHBF95ArgIeq6mzgo8CHliR5Q6an72PmBJ2+b5JaNNKhm6r6\nebe4ipnLJhTwBuBL3fh24OJueXN3H2AHcMGiJJUkLchIRZ9kRZI7gSngn4D/AA5W1VPdKgeAdd3y\nOmA/QFU9CRxM8vxFTS1JGtmoM/qnukM364HzgVcMW6377+EHe8flwiGStCwd09Urq+qRJP8MbAKe\nl2RFN6tfDzzYrXYAOBN4MMkpwOlV9fCw7W3btu3Q8mAwYDAYHPM/QJJaNjk5yeTk5HFtY96rVyZ5\nIfB4Vf1PkmcBtwAfBN4JfLmqPp/kb4HvVdV1Sd4D/HZVvSfJpcDFVXXpkO169crOeFw1Esbjjy8z\nzPLqlTrSQq5eOUrR/w4zL66u6G6fr6q/SvIS4CZgDXAn8PaqejzJKuDTwKuB/wYurap9Q7Zr0Xcs\nejMMZ9HrSEtS9EvFop9l0ZthOIteR/J69JKkI1j0ktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEW\nvSQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6SWqcRS9JjbPoJalxFr0kNc6il6TGWfSS1DiLXpIaZ9FL\nUuMseklqnEUvSY2z6CWpcRa9JDXOopekxln0ktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEWvSQ1\nzqKXpMZZ9JLUOItekhpn0UtS4+Yt+iTrk+xOck+Su5O8vxtfk2RXkj1Jbkmyes5jPp5kb5K7kpy7\nlP8ASdKvNsqM/gngqqp6JfBa4L1JXg5sAW6tqnOA3cDVAEkuBF5WVWcD7wauW5LkkqSRzFv0VTVV\nVXd1yz8D7gXWA5uB7d1q27v7dP+9sVv/NmB1kolFzi1JGtExHaNPshE4F/gWMFFV0zDzywA4o1tt\nHbB/zsMe6MYkST0YueiTnAbsAK7sZvZ1tFWHjB1tXUnSEls5ykpJVjJT8p+uqpu74ekkE1U1nWQt\n8JNu/ABw5pyHrwceHLbdbdu2HVoeDAYMBoNjCi9JrZucnGRycvK4tpGq+SfbSW4EflpVV80ZuxZ4\nqKquTbIFeF5VbUlyEfDeqnprkk3AR6tq05Bt1ij7Xg6SMB5/9IxDDjPMCv6M6HBJqKphR06O/pj5\nvpGSvB74F+BuZr77C7gGuB34AjOz9/uBS6rqYPeYTwBvAR4FLq+qO4Zs16LvWPRmGM6i15GWpOiX\nikU/y6I3w3AWvY60kKL3zFhJapxFL0mNG+ldN5L6sKo7rNefiYkNTE3t6zWDjp/H6MeAx+jNMNw4\n5PB1gnHjMXpJ0hEseklqnEUvSY2z6CWpcRa9JDXOopekxln0ktQ4i16SGmfRS1LjLHpJapxFL0mN\ns+glqXEWvSQ1zqKXpMZZ9JLUOItekhpn0UtS4yx6SWqcRS9JjbPoJalxFr0kNc6il6TGWfSS1DiL\nXpIaZ9FLUuMseklq3Mq+A/Rt7dqNTE/f13cMSVoyqap+dpxUX/s+LAfQd45xyADjkcMMs8YhRxiH\nn1PNSkJV5Vge46EbSWqcRS9JjbPoJalxFr0kNW7eok9yfZLpJN+fM7Ymya4ke5LckmT1nK99PMne\nJHclOXepgkuSRjPKjP4G4M2HjW0Bbq2qc4DdwNUASS4EXlZVZwPvBq5bxKySpAWYt+ir6hvAw4cN\nbwa2d8vbu/tPj9/YPe42YHWSicWJKklaiIUeoz+jqqYBqmoKOKMbXwfsn7PeA92YJKkni31m7LA3\n8R/1bItt27YdWh4MBgwGg0WOI0knt8nJSSYnJ49rGyOdGZtkA/APVfWq7v69wKCqppOsBb5eVa9I\ncl23/PluvR8Av//07P+wbXpm7GyKMcgA45HDDLPGIYdnxo6bpTwzNjxztr4TuKxbvgy4ec74O7ow\nm4CDw0peknTizDujT/JZYAC8AJgGtgJfAb4InAncD1xSVQe79T8BvAV4FLi8qu44ynad0c+mGIMM\nMB45zDBrHHI4ox83C5nRe1Ezi36OcchhhlnjkMOiHzde1EySdASLXpIaZ9FLUuMseklqnEUvSY2z\n6CWpcRa9JDVusa91I6kpq7pzTfo1MbGBqal9fcc4aXnClCdMzTEOOcwwaxxyjEMG8MStWZ4wJUk6\ngkUvSY2z6CWpcRa9JDXOopekxln0ktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEWvSQ1zqKXpMZZ\n9JLUOItekhpn0UtS4yx6SWpcrx8l+N3vfrfP3bNmzZpe9y9JJ0KvHyW4evV5vez7ab/4xb089tgv\n6P+j0sbn49r6z2GGWeOQYxwygB8lOGshHyXYa9H3/Q106qmn89hj/0vfOcbph6n/HGaYNQ45xiED\nWPSz/MxYSdIRLHpJapxFL0mNs+glqXEWvSQ1rtf30UvSaFaRHNMbTRbdxMQGpqb29ZphoZZkRp/k\nLUl+kOSHSf5yKfYhaTn5JTNv8+zvNj1939L/M5fIohd9khXAJ4A3A78FvC3Jyxd7P5Kk0SzFjP58\nYG9V3VdVjwM3AZuXYD+SpBEsxTH6dcD+OfcPMFP+knQS6/91goVaiqIf9kwMPXf59NP/cAl2P7pH\nH/2/Xvcv6WTy9OsEfTv2XzZLUfQHgLPm3F8PPDhsxUce+ccl2P1CjMNv6XHIAOORwwyzxiHHOGSA\n8cgxDhmO3aJf1CzJKcAe4ALgx8DtwNuq6t5F3ZEkaSSLPqOvqieTvA/YxcyLvddb8pLUn94uUyxJ\nOjF6uQSCJ1TNSLI+ye4k9yS5O8n7+87UpyQrktyRZGffWfqWZHWSLya5N8m/JXlN35n6kOQvkvxr\nku8n+UySU/vOdCIluT7JdJLvzxlbk2RXkj1Jbkmyer7tnPCi94SqZ3gCuKqqXgm8FnjvMn4uAK4E\n7uk7xJj4GPDVqnoF8LvAsjv8meTFwJ8B51XVq5g51Hxpv6lOuBuY6cq5tgC3VtU5wG7g6vk20seM\n3hOqOlU1VVV3dcs/Y+aHeV2/qfqRZD1wEfCpvrP0Lclzgd+rqhsAquqJqnqk51h9OQV4TpKVwLM5\nyjv4WlVV3wAePmx4M7C9W94OXDzfdvoo+mEnVC3LcpsryUbgXOC2fpP05iPABxiPNyr37aXAT5Pc\n0B3K+mSSZ/Ud6kSrqgeBDwP3Aw8AB6vq1n5TjYUzqmoaZiaLwIvme0AfRT/yCVXLRZLTgB3Ald3M\nfllJ8lZguvvrJpysb1ZePCuB84C/qarzgJ8z8+f6spLkeczMXjcALwZOS/LH/aY6OfVR9COfULUc\ndH+S7gA+XVU3952nJ68H/ijJj4DPAW9IcmPPmfp0ANhfVd/p7u9gpviXmzcCP6qqh6rqSeDLwOt6\nzjQOppNMACRZC/xkvgf0UfTfBn4jyYbuFfRLgeX8Lou/A+6pqo/1HaQvVXVNVZ1VVS9l5vthd1W9\no+9cfen+LN+f5De7oQtYni9S3w9sSvLrmbnIzAUswxelOfKv3J3AZd3yO4F5J4gn/INHPKFqVpLX\nA38C3J3kTmYOYV1TVV/rN5nGwPuBzyT5NeBHwOU95znhqur2JDuAO4HHu/9+st9UJ1aSzwID4AVJ\n7ge2Ah8EvpjkXcz8Mrxk3u14wpQktc3PjJWkxln0ktQ4i16SGmfRS1LjLHpJapxFL0mNs+glqXEW\nvSQ17v8B29fTr3RaCnAAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f5dbe4f1748>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({3: 471, 4: 461, 5: 332, 2: 311, 6: 186, 1: 122, 7: 73, 0: 28, 8: 12, 9: 3, 10: 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import random\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "ks = []\n",
+    "for i in range(2000):\n",
+    "    if (random() < .3):\n",
+    "        acc = .3\n",
+    "    else:\n",
+    "        acc = .4\n",
+    "\n",
+    "    k = 0\n",
+    "    for j in range(10):\n",
+    "        if (random() <= acc):\n",
+    "            k += 1\n",
+    "    ks.append(k)\n",
+    "    if (k == 10):\n",
+    "        print(\"woo\")\n",
+    "    \n",
+    "plt.hist(ks, bins=10)\n",
+    "plt.show()\n",
+    "\n",
+    "from collections import Counter\n",
+    "c = Counter(ks)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.23054197320000014"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import binom\n",
+    "\n",
+    ".3 * binom(10, .3).pmf(3) + .7 * binom(10, .4).pmf(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binom(2, .5).pmf(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
