--- a/code/report04.ipynb
+++ b/code/report04.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -20,6 +20,7 @@
    "source": [
     "from thinkbayes2 import Pmf, Suite, Joint\n",
     "from itertools import product\n",
+    "from random import random\n",
     "import thinkplot\n",
     "import numpy as np\n",
     "% matplotlib inline"
@@ -222,75 +223,113 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we assume that each round has no impact on the round following it, we can model the # of rounds won by each team as a Poisson distribution."
+    "To simulate the progress of a match, we determine the average probability of each team winning a round based on their previous matches."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8727272727272727 0.5368421052631579\n"
+     ]
+    }
+   ],
    "source": [
-    "from thinkbayes2 import EvalPoissonPmf, MakePoissonPmf\n",
+    "teamA_prob = (16 + 16 + 16)/(18 + 17 + 20)\n",
+    "teamB_prob = (16 + 19 + 16)/(29 + 36 + 30)\n",
+    "print(teamA_prob, teamB_prob)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Team B has a much lower chance of winning a round as they almost or did go into overtime in every game."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A'"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "    Each team effectively has half of their probability of winning since they are facing each other.\n",
+    "    In the event that the random number falls outside of both teams' ranges, it is re-rolled until\n",
+    "    one team wins.\n",
+    "'''\n",
+    "def playRound():\n",
+    "    prob = 2 * random()\n",
+    "    if (prob < teamA_prob):\n",
+    "        return 'A'\n",
+    "    elif (prob > (1 + teamB_prob)):\n",
+    "        return 'B'\n",
+    "    else:\n",
+    "        return playRound()\n",
     "\n",
-    "teamA = MakePoissonPmf(16, 30)\n",
-    "teamB = MakePoissonPmf(15.667, 30)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that team B has a slightly lower average rounds per game as they tied one game and went to overtime."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Taking both pmf's, we can compute the probability of one team winning 16 rounds while the other wins <15."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0395999906143\n",
-      "0.0363372392009\n"
-     ]
-    }
-   ],
-   "source": [
-    "prob_A_win = 0\n",
-    "prob_B_win = 0\n",
-    "\n",
-    "for i in range(15):\n",
-    "    prob_A_win += EvalPoissonPmf(16, 16) * EvalPoissonPmf(i, 15.667)\n",
-    "    prob_B_win += EvalPoissonPmf(16, 15.667) * EvalPoissonPmf(i, 16)\n",
+    "'''\n",
+    "    Play overtime matches, best of 6, ties possible\n",
+    "'''\n",
+    "def playOvertimes():\n",
+    "    teamA_score = 0;\n",
+    "    teamB_score = 0;\n",
+    "    while(not ((teamA_score == 4 or teamB_score == 4) or (teamA_score == 3 and teamB_score == 3))):\n",
+    "        round_winner = playRound()\n",
+    "        if (round_winner == 'A'):\n",
+    "            teamA_score += 1\n",
+    "        else:\n",
+    "            teamB_score += 1\n",
+    "    if (teamA_score > teamB_score):\n",
+    "        return 'A'\n",
+    "    elif (teamB_score > teamA_score):\n",
+    "        return 'B'\n",
+    "    else:\n",
+    "        return playOvertimes()\n",
     "    \n",
-    "print(prob_A_win)\n",
-    "print(prob_B_win)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here we can see that team A has a slightly higher chance of winning due to their higher average rounds per game not counting overtime."
+    "'''\n",
+    "    Play game, best of 30, ties possible, in event of a tie do overtime until a winner appears\n",
+    "'''\n",
+    "def simGame():\n",
+    "    teamA_score = 0;\n",
+    "    teamB_score = 0;\n",
+    "    while(not ((teamA_score == 16 or teamB_score == 16) or (teamA_score == 15 and teamB_score == 15))):\n",
+    "        round_winner = playRound()\n",
+    "        if (round_winner == 'A'):\n",
+    "            teamA_score += 1\n",
+    "        else:\n",
+    "            teamB_score += 1\n",
+    "    if (teamA_score > teamB_score):\n",
+    "        return 'A'\n",
+    "    elif (teamB_score > teamA_score):\n",
+    "        return 'B'\n",
+    "    else:\n",
+    "        return playOvertimes()\n",
+    "simGame()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 164,
    "metadata": {
     "collapsed": false
    },
@@ -299,52 +338,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0100180872685\n"
+      "968 32\n",
+      "0.968\n"
      ]
     }
    ],
    "source": [
-    "prob_tie = EvalPoissonPmf(15, 16) * EvalPoissonPmf(15, 15.667)\n",
-    "print(prob_tie)"
+    "teamA_wins = 0\n",
+    "teamB_wins = 0\n",
+    "for i in range(1000):\n",
+    "    winning_team = simGame()\n",
+    "    if (winning_team == 'A'):\n",
+    "        teamA_wins += 1\n",
+    "    else:\n",
+    "        teamB_wins += 1\n",
+    "        \n",
+    "print(teamA_wins, teamB_wins)\n",
+    "print(teamA_wins/(teamA_wins + teamB_wins))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, there is a chance that they will tie, in which case they will play a match of 6 rounds."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0403029030411\n",
-      "0.0370032667077\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(3):\n",
-    "    prob_A_win += prob_tie * EvalPoissonPmf(4, 16 * 6/30) * EvalPoissonPmf(i, 15.667 * 6/30)\n",
-    "    prob_B_win += prob_tie * EvalPoissonPmf(4, 15.667 * 6/30) * EvalPoissonPmf(i, 16 * 6/30)\n",
-    "    \n",
-    "print(prob_A_win)\n",
-    "print(prob_B_win)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In overtime, team A's advantage grows as their superior average scoring helps them gain more overtime rounds."
+    "In a simulation of 1000 games, team A won 96.8% of them against team B. However, depending on how good the teams that A and B played against in their calibration matches were, this prediction might be highly innacurate if, for example, team B played against a much better team than A did. However, assuming that they were calibrated against equal opponents, team A stands a much better chance against B."
    ]
   },
   {
@@ -539,13 +556,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Project Problem\n",
+    "\n",
+    "see [https://github.com/mafaldaborges/ThinkBayes2/blob/master/code/Report04_Project.ipynb](https://github.com/mafaldaborges/ThinkBayes2/blob/master/code/Report04_Project.ipynb)"
+   ]
   }
  ],
  "metadata": {
